--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,24 @@
   </head>
   <body>
 
-    <h1>Hello World!</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12">
+          <h1>Hello World!</h1>
+
+          <!-- use jQuery plugin on this guy -->
+          <script id="wellTemplate" type="text/x-handlebars-template">
+            <div class="well">
+              <h2>{{heading}}</h2>
+              <p>{{body}}</p>
+            </div>
+          </script>
+
+        </div>
+      </div>
+    </div>
+
+
 
     <script src="js/bundle.js"></script>
   </body>
