got a basic version working

--- a/app/index.html
+++ b/app/index.html
@@ -13,13 +13,17 @@
         <div class="col-xs-12">
           <h1>Hello World!</h1>
 
+          <div id="target-container">
+
           <!-- use jQuery plugin on this guy -->
-          <script id="wellTemplate" type="text/x-handlebars-template">
-            <div class="well">
-              <h2>{{heading}}</h2>
-              <p>{{body}}</p>
-            </div>
-          </script>
+            <script id="template" type="text/x-handlebars-template">
+              <div class="well">
+                <h2>{{heading}}</h2>
+                <p>{{body}}</p>
+              </div>
+            </script>
+
+          </div>
 
         </div>
       </div>
